--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,6 @@ frontend/modules/referrals/views/service/_methodreference_20190419.php
 frontend/web/images/nppc-logo.png
 frontend/web/images/nppclogo.jpg
 frontend/web/images/onelab-logo.png
+common/models/referral/Packagelist_20180912.php
+frontend/modules/lab/views/request/viewreferral_20190422.php
+common/models/referral/Packagelist_.php
