--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ frontend/web/images/onelab-logo.png
 common/models/referral/Packagelist_20180912.php
 frontend/modules/lab/views/request/viewreferral_20190422.php
 common/models/referral/Packagelist_.php
+common/components/ReferralComponent_20190425.php
+common/models/referral/Analysis_20190321.php
+frontend/modules/lab/controllers/RequestController_20190419.php
