fix bug for notification
# fixed bug for notification local referral module

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,5 @@ common/components/ReferralComponent_20190425.php
 common/models/referral/Analysis_20190321.php
 frontend/modules/lab/controllers/RequestController_20190419.php
 frontend/modules/referrals/views/notification/notifications_all_20190429.php
+backend/web/uploads/packages/referrals.zip
+backend/web/uploads/packages/referrals.zip
