--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,5 @@ frontend/modules/lab/controllers/RequestController_20190419.php
 frontend/modules/referrals/views/notification/notifications_all_20190429.php
 backend/web/uploads/packages/referrals.zip
 backend/web/uploads/packages/referrals.zip
+backend/web/uploads/packages/referrals.zip
+backend/web/uploads/packages/referrals.zip
