--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,6 @@ backend/web/uploads/packages/referrals.zip
 backend/web/uploads/packages/referrals.zip
 backend/web/uploads/packages/referrals.zip
 backend/web/uploads/packages/referrals.zip
+backend/web/uploads/packages/referrals.zip
+common/config/db.php
+backend/web/uploads/packages/referrals.zip
