--- a/composer.json
+++ b/composer.json
@@ -123,7 +123,8 @@
         "kartik-v/yii2-export": "*",
         "philippfrenzel/yii2fullcalendar": "*",
 		"yiisoft/yii2-queue": "^2.0@dev",
-        "kop/yii2-scroll-pager": "dev-master"
+        "kop/yii2-scroll-pager": "dev-master",
+        "sizeg/yii2-jwt": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-gii": "^2.0"
