Installation setup and Mobile API updates

--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,6 @@ backend/web/uploads/packages/referrals.zip
 backend/web/uploads/packages/referrals.zip
 common/config/db.php
 backend/web/uploads/packages/referrals.zip
+common/config/db.php
+common/config/db.php
+common/config/db.php
