update for referral
# update for bugs encountered during creation of referral bidding
# referral bidding
# notifications read/unread

--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,8 @@ frontend/modules/referrals/controllers/BidController_20181010.php
 frontend/views/admin-lte/layouts/content_20190410.php
 frontend/views/admin-lte/layouts/left_20190522.php
 frontend/views/admin-lte/layouts/main_20190516.php
+common/components/Functions_20190514.php
+frontend/modules/lab/controllers/SampleController_20190514.php
+frontend/modules/referrals/views/notification/_list_item_20190514.php
+frontend/modules/referrals/views/notification/list_unresponded_notification_20190312.php
+frontend/modules/lab/views/request/viewreferral_bk.php
