update generate sample code
# remove GLOBAL rstl_id variable, changed to profile rstl_id

--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,4 @@ frontend/modules/lab/controllers/SampleController_20190514.php
 frontend/modules/referrals/views/notification/_list_item_20190514.php
 frontend/modules/referrals/views/notification/list_unresponded_notification_20190312.php
 frontend/modules/lab/views/request/viewreferral_bk.php
+frontend/modules/referrals/views/bid/view_20180912.php
