--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,6 @@ frontend/modules/referrals/views/notification/list_unresponded_notification_2019
 frontend/modules/lab/views/request/viewreferral_bk.php
 frontend/modules/referrals/views/bid/view_20180912.php
 frontend/modules/lab/controllers/RequestController_20190705.php
+common/components/ReferralComponent_20190704.php
+frontend/modules/referrals/controllers/BidController_20190711.php
+frontend/modules/lab/views/request/viewreferral_20190723_back.php
