update for referral
# pstc and some referral program code modifications

--- a/frontend/config/modules.ini
+++ b/frontend/config/modules.ini
@@ -1,6 +1,6 @@
 ;This is a System generated configuration file.
-;Created: 04/02/2019 01:19 AM
-;Last Updated: 04/22/2019 08:51 AM
+;Created: 05/14/2019 08:17 AM
+;Last Updated: 09/20/2019 11:03 AM
 [lab]
 class = "frontend\modules\lab\lab"
 defaultRoute = "default/index"
@@ -30,4 +30,7 @@ class = "frontend\modules\api\api"
 defaultRoute = "default/index"
 [referrals]
 class = "frontend\modules\referrals\referrals"
+defaultRoute = "default/index"
+[pstc]
+class = "frontend\modules\pstc\pstc"
 defaultRoute = "default/index"
