--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,6 @@ vendor/lcobucci/jwt/
 vendor/sizeg/yii2-jwt/
 common/config/db.php
 common/config/db.php
+frontend/modules/pstc/controllers/PstcrequestController_20190925.php
+frontend/modules/pstc/views/pstcrequest/_formRequestDetails----.php
+frontend/modules/pstc/views/pstcrequest/_formRequestDetails_20190925.php
