--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,4 @@ common/config/db.php
 frontend/modules/pstc/controllers/PstcrequestController_20190925.php
 frontend/modules/pstc/views/pstcrequest/_formRequestDetails----.php
 frontend/modules/pstc/views/pstcrequest/_formRequestDetails_20190925.php
+backend/web/uploads/packages/pstc.zip
