--- a/.gitignore
+++ b/.gitignore
@@ -387,3 +387,9 @@ frontend/modules/pstc/views/pstcrequest/_formRequestDetails----.php
 frontend/modules/pstc/views/pstcrequest/_formRequestDetails_20190925.php
 backend/web/uploads/packages/pstc.zip
 common/config/db.php
+common/components/ReferralComponent_20191016.php
+common/config/db.php
+common/config/db.php
+common/config/db.php
+frontend/modules/lab/views/request/index_20190708.php
+frontend/modules/pstc/views/pstcrequest/_formRequestDetails==.php
