--- a/frontend/config/modules.ini
+++ b/frontend/config/modules.ini
@@ -1,6 +1,6 @@
 ;This is a System generated configuration file.
-;Created: 05/14/2019 08:17 AM
-;Last Updated: 09/20/2019 11:03 AM
+;Created: 04/04/2019 02:41 AM
+;Last Updated: 11/13/2019 04:41 PM
 [lab]
 class = "frontend\modules\lab\lab"
 defaultRoute = "default/index"
@@ -33,4 +33,7 @@ class = "frontend\modules\referrals\referrals"
 defaultRoute = "default/index"
 [pstc]
 class = "frontend\modules\pstc\pstc"
+defaultRoute = "default/index"
+[track]
+class = "frontend\modules\track\track"
 defaultRoute = "default/index"
