--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,5 @@ common/components/ReferralComponent_20191016.php
 frontend/modules/lab/views/request/index_20190708.php
 frontend/modules/pstc/views/pstcrequest/_formRequestDetails==.php
 
+frontend/views/admin-lte/layouts/left.php
+common/config/db.php
