--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ frontend/modules/pstc/views/pstcrequest/_formRequestDetails_20191112_bk.php
 frontend/modules/referrals/controllers/ReferralController_20191111.php
 frontend/modules/referrals/controllers/ReferralController_20191120.php
 frontend/modules/pstc/views/pstcrequest/_formRequestDetails_with_dropdown.php
+common/config/db.php
