--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ common/config/db.php
 common/models/lab/Sample_20190514.php
 frontend/modules/lab/components/eRequest - Copy.php
 frontend/modules/lab/controllers/SampleController_20191120.php
+common/config/db.php
